--- a/presentation/src/main/res/layout/include_user_info.xml
+++ b/presentation/src/main/res/layout/include_user_info.xml
@@ -11,7 +11,7 @@
         android:id="@+id/userAvatar"
         android:layout_width="@dimen/image_avatar_size"
         android:layout_height="@dimen/image_avatar_size"
-        android:background="?selectableItemBackgroundBorderless"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         tools:src="@mipmap/ic_launcher" />
 
     <LinearLayout
