--- a/presentation/src/main/res/layout/item_list_post.xml
+++ b/presentation/src/main/res/layout/item_list_post.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/spacing_standard"
-    android:foreground="?selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
     <LinearLayout
         android:layout_width="match_parent"
