--- a/presentation/src/main/res/layout/activity_user_details.xml
+++ b/presentation/src/main/res/layout/activity_user_details.xml
@@ -9,8 +9,8 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-<!--        tools:context="com.sanogueralorenzo.presentation.userdetails.UserDetailsActivity" />-->
+        android:layout_height="match_parent"
+        tools:context="com.zemogaposttest.juansandoval.presentation.userdetails.UserDetailsActivity"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
