--- a/presentation/src/main/res/layout/include_user_info_small.xml
+++ b/presentation/src/main/res/layout/include_user_info_small.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal"
-    android:padding="@dimen/spacing_standard">
+    android:padding="@dimen/spacing_standard"
+    android:background="@color/md_grey_800">
 
     <ImageButton
         android:id="@+id/userAvatar"
@@ -21,7 +22,7 @@
         android:layout_marginStart="@dimen/spacing_standard"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/colorName"
+        android:textColor="@color/md_white_1000"
         android:textSize="@dimen/text_small"
         tools:text="Name" />
 
