--- a/presentation/src/main/res/layout/item_list_post.xml
+++ b/presentation/src/main/res/layout/item_list_post.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/spacing_standard"
-    android:foreground="?android:attr/selectableItemBackgroundBorderless">
+                                    xmlns:tools="http://schemas.android.com/tools"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="@dimen/spacing_standard"
+                                    android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/md_grey_800"
         android:orientation="vertical">
 
-        <include layout="@layout/include_user_info" />
+        <include layout="@layout/include_user_info"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/colorDivider" />
+            android:background="@color/colorDivider"/>
 
         <TextView
             android:id="@+id/postTitle"
@@ -25,9 +26,9 @@
             android:layout_margin="@dimen/spacing_standard"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/colorTitle"
+            android:textColor="@color/md_white_1000"
             android:textSize="@dimen/text_large"
-            tools:text="Post Title" />
+            tools:text="Post Title"/>
 
         <TextView
             android:id="@+id/postBody"
@@ -36,7 +37,8 @@
             android:layout_margin="@dimen/spacing_standard"
             android:ellipsize="end"
             android:maxLines="2"
-            tools:text="This is a long post body that it might get ellipsized at some point beyond imagination." />
+            android:textColor="@color/md_white_1000"
+            tools:text="This is a long post body that it might get ellipsized at some point beyond imagination."/>
 
     </LinearLayout>
 
